--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: [Jakarta RESTful Web Services provides a specification document, TC
 latestVersion: 3.0.0
 
 links:
-  source: https://github.com/jakartaee/rest
-  javadocs: https://jakartaee.github.io/rest/apidocs
+  source: https://github.com/QubitPi/jakartaee-rest
+  javadocs: https://qubitpi.github.io/jakartaee-rest/apidocs
   docs: https://jakarta.ee/specifications/restful-ws/3.0/jakarta-restful-ws-spec-3.0.html
   download: https://github.com/jakartaee/rest/releases
   mailinglist: https://accounts.eclipse.org/mailing-list/jaxrs-dev
