--- a/.github/workflows/maven-package.yml
+++ b/.github/workflows/maven-package.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '11', '17' ]
+        java: [ '17' ]
 
     steps:
     - uses: actions/checkout@v2
@@ -23,4 +23,27 @@ jobs:
         java-version: ${{ matrix.java }}
         distribution: 'temurin'
     - name: Build with Maven
-      run: mvn -B verify
+      run: |
+        mvn -B verify
+        cd jaxrs-spec && mvn install
+    - name: Move Javadoc into documentation directory
+      # if: github.ref == 'refs/heads/master'
+      run: |
+        mkdir -p docs/jaxrs-api/target/
+        mkdir -p docs/examples/target/
+        mkdir -p docs/jaxrs-tck-docs/
+        mkdir -p docs/jaxrs-spec/target/generated-docs/
+        
+        mv jaxrs-api/target/* docs/jaxrs-api/target/
+        mv examples/target/* docs/examples/target/
+        mv jaxrs-tck-docs/* docs/jaxrs-tck-docs/
+        mv jaxrs-spec/target/generated-docs/* docs/jaxrs-spec/target/generated-docs/
+    - name: Publish all docs to GitHub Pages
+      # if: github.ref == 'refs/heads/master'
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: docs
+        enable_jekyll: true
+        user_name: QubitPi
+        user_email: jack20220723@gmail.com
