--- a/.github/workflows/maven-package.yml
+++ b/.github/workflows/maven-package.yml
@@ -3,9 +3,9 @@ name: Jakarta REST CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, master ]
 
 jobs:
   build:
@@ -23,4 +23,25 @@ jobs:
         java-version: ${{ matrix.java }}
         distribution: 'temurin'
     - name: Build with Maven
-      run: mvn -B -ntp clean verify -Djaxrs.all.build
+      run: |
+        mvn -B -ntp clean verify -Djaxrs.all.build
+        cd jaxrs-spec && mvn install
+    - name: Move Javadoc into documentation directory
+      run: |
+        mkdir -p docs/jaxrs-api/target/
+        mkdir -p docs/examples/target/
+        mkdir -p docs/jaxrs-tck-docs/
+        mkdir -p docs/jaxrs-spec/target/generated-docs/
+        
+        mv jaxrs-api/target/* docs/jaxrs-api/target/
+        mv examples/target/* docs/examples/target/
+        mv jaxrs-tck-docs/* docs/jaxrs-tck-docs/
+        mv jaxrs-spec/target/generated-docs/* docs/jaxrs-spec/target/generated-docs/
+    - name: Publish all docs to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: docs
+        enable_jekyll: true
+        user_name: QubitPi
+        user_email: jack20220723@gmail.com
