--- a/.github/workflows/maven-package.yml
+++ b/.github/workflows/maven-package.yml
@@ -23,20 +23,15 @@ jobs:
         java-version: ${{ matrix.java }}
         distribution: 'temurin'
     - name: Build with Maven
-      run: |
-        mvn -B -ntp clean verify -Djaxrs.all.build
-        cd jaxrs-spec && mvn install
+      run: mvn -B -ntp clean verify -Djaxrs.all.build
+    - name: Build spec and apidocs
+      run: mvn install
+      working-directory: jaxrs-spec
     - name: Move Javadoc into documentation directory
-      run: |
-        mkdir -p docs/jaxrs-api/target/
-        mkdir -p docs/examples/target/
-        mkdir -p docs/jaxrs-tck-docs/
-        mkdir -p docs/jaxrs-spec/target/generated-docs/
-        
-        mv jaxrs-api/target/* docs/jaxrs-api/target/
-        mv examples/target/* docs/examples/target/
-        mv jaxrs-tck-docs/* docs/jaxrs-tck-docs/
-        mv jaxrs-spec/target/generated-docs/* docs/jaxrs-spec/target/generated-docs/
+      run: |        
+        mv jaxrs-api/target/apidocs docs
+        mv jaxrs-spec/target/generated-docs/spec.html docs/jaxrs-spec.html
+        mv jaxrs-spec/target/generated-docs/spec.pdf docs/jaxrs-spec.pdf
     - name: Publish all docs to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
@@ -45,3 +40,4 @@ jobs:
         enable_jekyll: true
         user_name: QubitPi
         user_email: jack20220723@gmail.com
+        cname: jakartaee-rest.qubitpi.org
